--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -1,3 +1,6 @@
 /*.do=com.bitcamp.home.CommandIndex
 /index.do=com.bitcamp.home.CommandIndex
-/rgister/regFrom.do=com.bitcamp.home.register.CommandForm
+/register/regFrom.do=com.bitcamp.home.register.CommandForm
+/register/idSearch.do=com.bitcamp.home.register.CommandIdCheck
+/register/zipSearch.do=com.bitcamp.home.register.CommandZipCodeSearch
+/register/zipSearchAjax.do=com.bitcamp.home.register.CommandZipCodeSearchAjax
