--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -4,3 +4,7 @@
 /register/idSearch.do=com.bitcamp.home.register.CommandIdCheck
 /register/zipSearch.do=com.bitcamp.home.register.CommandZipCodeSearch
 /register/zipSearchAjax.do=com.bitcamp.home.register.CommandZipCodeSearchAjax
+/register/regFormOk.do=com.bitcamp.home.register.CommandFormOk
+/login.do=com.bitcamp.home.register.CommandLoginForm
+/loginOk.do=com.bitcamp.home.register.CommandLoginFormOk
+/logout.do=com.bitcamp.home.register.CommandLogout
