--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -5,6 +5,9 @@
 /register/zipSearch.do=com.bitcamp.home.register.CommandZipCodeSearch
 /register/zipSearchAjax.do=com.bitcamp.home.register.CommandZipCodeSearchAjax
 /register/regFormOk.do=com.bitcamp.home.register.CommandFormOk
+/register/regEditForm.do=com.bitcamp.home.register.CommandEditForm
+/register/regEditFormOk.do=com.bitcamp.home.register.CommandEditFormOk
 /login.do=com.bitcamp.home.register.CommandLoginForm
 /loginOk.do=com.bitcamp.home.register.CommandLoginFormOk
 /logout.do=com.bitcamp.home.register.CommandLogout
+/board/boardList.do=com.bitcamp.home.board.CommandBoardList
