--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -11,3 +11,5 @@
 /loginOk.do=com.bitcamp.home.register.CommandLoginFormOk
 /logout.do=com.bitcamp.home.register.CommandLogout
 /board/boardList.do=com.bitcamp.home.board.CommandBoardList
+/register/regDeleteForm.do=com.bitcamp.home.register.CommandDeleteForm
+/register/regDeleteFormOk.do=com.bitcamp.home.register.CommandDeleteFormOk
