--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,7 +15,10 @@
   	<servlet-class>com.bitcamp.home.ControllerAction</servlet-class>
   	<init-param>
   		<param-name>proFileName</param-name>
-  		<param-value>D:\workspaceWeb\webMVC\WebContent\WEB-INF\prop\urlMapping.properties</param-value>
+  		<!-- 학원 -->
+  		<!-- <param-value>D:\workspaceWeb\webMVC\WebContent\WEB-INF\prop\urlMapping.properties</param-value> -->
+  		<!-- 집 -->
+  		<param-value>C:\Users\Jung\workspaceWeb\webMVC\WebContent\WEB-INF\prop\urlMapping.properties</param-value>
   	</init-param>
   </servlet>
   <servlet-mapping>
