--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -11,5 +11,6 @@
 /loginOk.do=com.bitcamp.home.register.CommandLoginFormOk
 /logout.do=com.bitcamp.home.register.CommandLogout
 /board/boardList.do=com.bitcamp.home.board.CommandBoardList
+/board/boardView.do=com.bitcamp.home.board.CommandBoardView
 /register/regDeleteForm.do=com.bitcamp.home.register.CommandDeleteForm
 /register/regDeleteResult.do=com.bitcamp.home.register.CommandDeleteFormOk
