--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -1,12 +1,14 @@
 /*.do=com.bitcamp.home.CommandIndex
 /index.do=com.bitcamp.home.CommandIndex
-/register/regFrom.do=com.bitcamp.home.register.CommandForm
+/register/regForm.do=com.bitcamp.home.register.CommandForm
 /register/idSearch.do=com.bitcamp.home.register.CommandIdCheck
 /register/zipSearch.do=com.bitcamp.home.register.CommandZipCodeSearch
 /register/zipSearchAjax.do=com.bitcamp.home.register.CommandZipCodeSearchAjax
 /register/regFormOk.do=com.bitcamp.home.register.CommandFormOk
 /register/regEditForm.do=com.bitcamp.home.register.CommandEditForm
 /register/regEditFormOk.do=com.bitcamp.home.register.CommandEditFormOk
+/register/regLeaveForm.do=com.bitcamp.home.register.CommandLeaveForm
+/register/regLeaveFormOk.do=com.bitcamp.home.register.CommandLeaveFormOk
 /login.do=com.bitcamp.home.register.CommandLoginForm
 /loginOk.do=com.bitcamp.home.register.CommandLoginFormOk
 /logout.do=com.bitcamp.home.register.CommandLogout
@@ -17,5 +19,4 @@
 /board/boardDelete.do=com.bitcamp.home.board.CommandBoardDelete
 /board/boardWrite.do=com.bitcamp.home.board.CommandBoardWrite
 /board/boardWriteOk.do=com.bitcamp.home.board.CommandBoardWriteOk
-/register/regDeleteForm.do=com.bitcamp.home.register.CommandDeleteForm
-/register/regDeleteResult.do=com.bitcamp.home.register.CommandDeleteFormOk
+/data/dataList.do=com.bitcamp.home.data.CommandDataList
