--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,14 +10,20 @@
   <description>
      Welcome to Tomcat
   </description>
+  <resource-ref>
+  	<description>Oracle Datasource example</description>
+  	<res-ref-name>jdbc/myoracle</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
   <servlet>
   	<servlet-name>homeControll</servlet-name>
   	<servlet-class>com.bitcamp.home.ControllerAction</servlet-class>
   	<init-param>
   		<param-name>proFileName</param-name>
-  		<!-- 학원 -->
+  		<!-- bitcamp -->
   		<param-value>D:\workspaceWeb\webMVC\WebContent\WEB-INF\prop\urlMapping.properties</param-value>
-  		<!-- 집 -->
+  		<!-- home -->
   		<!-- <param-value>C:\Users\Jung\workspaceWeb\webMVC\WebContent\WEB-INF\prop\urlMapping.properties</param-value> -->
   	</init-param>
   </servlet>
