--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -20,3 +20,6 @@
 /board/boardWrite.do=com.bitcamp.home.board.CommandBoardWrite
 /board/boardWriteOk.do=com.bitcamp.home.board.CommandBoardWriteOk
 /data/dataList.do=com.bitcamp.home.data.CommandDataList
+/data/dataWriteForm.do=com.bitcamp.home.data.CommandDataWrite
+/data/dataWriteOk.do=com.bitcamp.home.data.CommandDataWriteOk
+/data/downloadCount.do=com.bitcamp.home.data.CommandDownloadCount
