--- a/WebContent/WEB-INF/prop/urlMapping.properties
+++ b/WebContent/WEB-INF/prop/urlMapping.properties
@@ -23,3 +23,7 @@
 /data/dataWriteForm.do=com.bitcamp.home.data.CommandDataWrite
 /data/dataWriteOk.do=com.bitcamp.home.data.CommandDataWriteOk
 /data/downloadCount.do=com.bitcamp.home.data.CommandDownloadCount
+/data/dataView.do=com.bitcamp.home.data.CommandDataView
+/data/dataEdit.do=com.bitcamp.home.data.CommandDataEdit
+/data/dataEditOk.do=com.bitcamp.home.data.CommandDataEditOk
+/data/dataDel.do=com.bitcamp.home.data.CommandDataDelete
